--- a/includes/history.tex
+++ b/includes/history.tex
@@ -1,6 +1,7 @@
 \begin{versionhistory}
     \vhEntry{1.0}{25.10.2022}{Ema Richnáková}
     {vytvorený dokument, história zmien, obsah, úvod do problematiky}
-    \vhEntry{2.0}{6.11.2022}{Ema Richnáková}
+    \vhEntry{1.1}{10.11.2022}{Ema Richnáková}
     {používateľské požiadavky}
+    \vhEntry{1.2}{17.11.2022}{Ema Richnáková}{diagramy prípadov použitia}
 \end{versionhistory}
