class diagram done

--- a/includes/core.tex
+++ b/includes/core.tex
@@ -240,11 +240,16 @@ podmienok.
     \end{tabular}
 \end{table}
 
+\newpage
+
 \subsection{Diagram tried}
-Vytvorte jeden detailný dátový model pre celý váš systém, ktorý bude zahŕňať
-všetky atribúty, vzťahy, násobnosti a aspoň niektoré metódy. Zobrazte ho ako jeden UML 2.x
-diagram tried vo vašej výslednej dokumentácii. Ak je systém príliš komplexný, môžete rozčleniť
-diagram na viacero menších diagramov, ktoré budú reprezentovať len príslušný podsystém.
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=\linewidth]{img/class_diagram.png}
+    \caption{Class diagram}
+    \label{class_diagram}
+\end{figure}
 
 \subsection{Diagramy aktivít a sekvenčné diagramy}
 K vybraným netriviálnym prípadom použitia nakreslite
