seq diagrams done

--- a/includes/core.tex
+++ b/includes/core.tex
@@ -251,7 +251,28 @@ podmienok.
     \label{class_diagram}
 \end{figure}
 
+\newpage
+
 \subsection{Diagramy aktivít a sekvenčné diagramy}
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.75\linewidth]{img/seq_createReservation.png}
+    \caption{Sekvenčný diagram: Vytvorenie rezervácie}
+    \label{seq_diagram_createRes}
+\end{figure}
+
+\newpage
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.95\linewidth]{img/seq_registerHousing.png}
+    \caption{Sekvenčný diagram: Registrácia ubytovania}
+    \label{seq_diagram_registerHou}
+\end{figure}
+
+\newpage
+
 K vybraným netriviálnym prípadom použitia nakreslite
 diagramy graficky popisujúce tieto prípady použitia. Nakreslite 2 sekvenčné diagramy a 2
 diagramy aktivít.
