--- a/includes/history.tex
+++ b/includes/history.tex
@@ -1,7 +1,10 @@
 \begin{versionhistory}
     \vhEntry{1.0}{25.10.2022}{Ema Richnáková}
-    {vytvorený dokument, história zmien, obsah, úvod do problematiky}
+        {vytvorený dokument, história zmien, obsah, úvod do problematiky}
     \vhEntry{1.1}{10.11.2022}{Ema Richnáková}
-    {používateľské požiadavky}
-    \vhEntry{1.2}{17.11.2022}{Ema Richnáková}{diagramy prípadov použitia}
+        {používateľské požiadavky}
+    \vhEntry{1.2}{17.11.2022}{Ema Richnáková}
+        {diagram prípadov použitia, use-case tabuľky, digram tried}
+    \vhEntry{1.3}{17.11.2022}{Ema Richnáková}
+        {diagram aktivít, sekvenčné diagramy}
 \end{versionhistory}
