activity diagrams done

--- a/includes/core.tex
+++ b/includes/core.tex
@@ -1,3 +1,4 @@
+\setcounter{table}{0}
 \section{Používateľská špecifikácia} % 3-4 strany
 \subsection{Stručný úvod do problematiky}
 
@@ -125,7 +126,7 @@ podmienok.
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=\linewidth]{img/uc_diagram.png}
-  \caption{Use case diagram}
+  \caption{Diagram prípadov použitia}
   \label{uc_diagram}
 \end{figure}	
 
@@ -247,13 +248,31 @@ podmienok.
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=\linewidth]{img/class_diagram.png}
-    \caption{Class diagram}
+    \caption{Diagram tried}
     \label{class_diagram}
 \end{figure}
 
 \newpage
 
 \subsection{Diagramy aktivít a sekvenčné diagramy}
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.8\linewidth]{img/act_createReservation.png}
+    \caption{Diagram aktivít: Vytvorenie rezervácie}
+    \label{act_diagram_createRes}
+\end{figure}
+
+\newpage
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.65\linewidth]{img/act_registerHousing.png}
+    \caption{Diagram aktivít: Registrácia ubytovania}
+    \label{act_diagram_registerHou}
+\end{figure}
+
+\newpage
 
 \begin{figure}[!htbp]
     \centering
@@ -272,10 +291,6 @@ podmienok.
 \end{figure}
 
 \newpage
-
-K vybraným netriviálnym prípadom použitia nakreslite
-diagramy graficky popisujúce tieto prípady použitia. Nakreslite 2 sekvenčné diagramy a 2
-diagramy aktivít.
 
 \subsection{Stavový diagram}
 Nakreslite stavový diagram pre vami vyvíjaný systém a v tabuľkách popíšte
